@@ -12,7 +12,8 @@ e-utils/e-hw-rev                        \
 e-utils/e-loader                        \
 e-utils/e-read                          \
 e-utils/e-reset                         \
-e-utils/e-write
+e-utils/e-write                         \
+e-utils/e-meshdump
 
 e_utils_e_clear_shmtable_SOURCES = e-utils/src/e-clear-shmtable.c
 e_utils_e_hw_rev_SOURCES         = e-utils/src/e-hw-rev.c
@@ -20,6 +21,7 @@ e_utils_e_loader_SOURCES         = e-utils/src/e-loader.c
 e_utils_e_read_SOURCES           = e-utils/src/e-read.c
 e_utils_e_reset_SOURCES          = e-utils/src/e-reset.c
 e_utils_e_write_SOURCES          = e-utils/src/e-write.c
+e_utils_e_meshdump_SOURCES       = e-utils/src/e-meshdump.c
 
 e_utils_e_clear_shmtable_LDADD   = $(EUTILS_LIBS)
 e_utils_e_hw_rev_LDADD           = $(EUTILS_LIBS)
@@ -27,3 +29,4 @@ e_utils_e_loader_LDADD           = $(EUTILS_LIBS)
 e_utils_e_read_LDADD             = $(EUTILS_LIBS)
 e_utils_e_reset_LDADD            = $(EUTILS_LIBS)
 e_utils_e_write_LDADD            = $(EUTILS_LIBS)
+e_utils_e_meshdump_LDADD         =
